<resources>
    <string name="app_name">CookingBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ThugRzz</string>
    <string name="nav_header_subtitle">thugrzz@icloud.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recipes">Рецепты</string>
    <string name="menu_myRecipes">Мои рецепты</string>
    <string name="menu_favoritesRecipes">Избранное</string>
    <string name="menu_personalCabinet">Личный кабинет</string>
    <string name="menu_info">О нас</string>
    <string name="search_query_hint">Введите название</string>
    <string name="ion_search">🔍Название рецепта</string>
    <string name="back">Авторизоваться</string>

    <!-- Authorization -->
    <string name="book">BookI</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="cook_it_together">Приготовим это вместе</string>
    <string name="lets_cook_together">Давайте приготовим вместе</string>
    <string name="skip">Выйти</string>
    <string name="login">Логин</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="nickname">Ник</string>
    <string name="err_msg_name">Введите ник полностью</string>
    <string name="err_msg_email">Введите правильную почту</string>
    <string name="err_msg_password">Пароль не может содержать меньше 6 символов</string>
    <string name="menu_change_profile_info">Изменение личных данных</string>
    <string name="communicate">Коммуникация</string>
</resources>
