<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_myRecipes" />
        <item
            android:id="@+id/nav_favorites_recipes"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favoritesRecipes" />
        <item
            android:id="@+id/nav_personal_cabinet"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_personalCabinet" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_info" />
        </menu>
    </item>

</menu>
