<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recipes">

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.cookingbook.ui.globalrecipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_my_recipes"
        android:name="com.example.cookingbook.ui.myrecipes.MyRecipesFragment"
        android:label="@string/menu_myRecipes"
        tools:layout="@layout/fragment_my_recipes" />

    <fragment
        android:id="@+id/nav_favorites_recipes"
        android:name="com.example.cookingbook.ui.favoritesrecipes.FavoritesRecipesFragment"
        android:label="@string/menu_favoritesRecipes"
        tools:layout="@layout/fragment_favorites_recipes" />

    <fragment
        android:id="@+id/nav_personal_cabinet"
        android:name="com.example.cookingbook.ui.personalcabinet.privatecabinet.PersonalCabinetFragment"
        android:label="@string/menu_personalCabinet"
        tools:layout="@layout/fragment_personal_cabinet" >
        <action
            android:id="@+id/action_nav_personal_cabinet_to_changeProfileActivity"
            app:destination="@id/changeProfileActivity" />
    </fragment>

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.cookingbook.ui.aboutus.AboutUsFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/changeProfileActivity"
        android:name="com.example.cookingbook.ui.personalcabinet.changeprofile.ChangeProfileFragment"
        android:label="@string/menu_change_profile_info"
        tools:layout="@layout/activity_change_profile" />
</navigation>