<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bookIconImageView1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@null"
        android:src="@drawable/background_color_book" />

    <RelativeLayout
        android:id="@+id/afterAnimationView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/WelcomeTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorBackground"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readItTogetherTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/WelcomeTextView1"
            android:layout_marginTop="10dp"
            android:text="@string/lets_cook_together"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/registrationButton"
            android:layout_below="@+id/readItTogetherTextView1"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nickNameEditText"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    android:inputType="textCapSentences"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailEditText1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordEditText1"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorTextView"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/registrationCheckbox"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:button="@drawable/checkbox_selector" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/backTextView"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_drawable"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/back"
            android:textColor="@color/colorTextView"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>